--- a/AJAY_NATH_JHA_2301010170_Day_03_Three_Weather_Detect_Mini_Project/weather_detect/templates/index.html
+++ b/AJAY_NATH_JHA_2301010170_Day_03_Three_Weather_Detect_Mini_Project/weather_detect/templates/index.html
@@ -7,12 +7,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Weather Detect</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <h1>Weather Detect</h1>
         <input type="text" id="locationInput" placeholder="Enter a city">
         <button id="searchButton">Search</button>
         <div class="weather-info">
